[package]
name = "trillium-opentelemetry"
version = "0.9.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "opentelemetry for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium-opentelemetry"
readme = "README.md"
keywords = ["trillium", "opentelemetry", "otel", "observability"]
categories = ["web-programming::http-server", "web-programming"]

[features]
default = ["metrics", "trace"]
metrics = ["opentelemetry/metrics"]
trace = ["opentelemetry/trace"]

[dependencies]
trillium = "0.2.11"
opentelemetry = { version = "0.24.0", default-features = false }
opentelemetry-semantic-conventions = "0.16.0"
trillium-macros = "0.0.6"

[dev-dependencies]
opentelemetry-otlp = { version = "0.17.0", features = ["metrics", "tokio", "trace"] }
opentelemetry =  "0.24.0"
tokio = { version = "1.37.0", features = ["full"] }
trillium-router = "0.4.1"
trillium-tokio = "0.4.0"
trillium-opentelemetry = { path = ".", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
env_logger = "0.11.3"
