[package]
name = "trillium-opentelemetry"
version = "0.10.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "opentelemetry for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium-opentelemetry"
readme = "README.md"
keywords = ["trillium", "opentelemetry", "otel", "observability"]
categories = ["web-programming::http-server", "web-programming"]

[features]
default = ["metrics", "trace"]
metrics = ["opentelemetry/metrics"]
trace = ["opentelemetry/trace"]

[dependencies]
trillium = "0.2.11"
opentelemetry = { version = "0.27.1", default-features = false }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
trillium-macros = "0.0.6"

[dev-dependencies]
opentelemetry-otlp = { version = "0.27.0", features = ["metrics", "tokio", "trace"] }
opentelemetry = "0.27.1"
tokio = { version = "1.37.0", features = ["full"] }
trillium-router = "0.4.1"
trillium-tokio = "0.4.0"
trillium-opentelemetry = { path = ".", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
env_logger = "0.11.3"
