[package]
name = "trillium-opentelemetry"
version = "0.11.0"
edition = "2024"
description = "opentelemetry for trillium.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium-opentelemetry"
readme = "README.md"
keywords = ["trillium", "opentelemetry", "otel", "observability"]
categories = ["web-programming::http-server", "web-programming"]

[features]
default = ["metrics", "trace"]
metrics = ["opentelemetry/metrics"]
trace = ["opentelemetry/trace"]

[dependencies]
trillium = "1"
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
trillium-macros = "0.1.0"
trillium-http = "1"

[dev-dependencies]
opentelemetry-otlp = { version = "0.31.1", features = ["metrics", "tokio", "trace"] }
opentelemetry = "0.31.0"
tokio = { version = "1.52.2", features = ["full"] }
trillium-router = "0.5.0"
trillium-tokio = "0.6.1"
trillium-opentelemetry = { path = ".", features = ["metrics", "trace"] }
opentelemetry_sdk = "0.31.0"
env_logger = "0.11.10"
